sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:10: error: missing arguments for method plusPetit in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
          if(getValeur(i)<plusPetit)
                          ^