sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var N=0
  while(N!=getNombreValeurs()-1)
  	{
      var pluspetit = getValeur(N)
      var indice=0
      for(i<-N to getNombreValeurs()-1)
      	{
          if(getValeur(i)<plusPetit)
          	{
              indice= i
            }
        }
      echange(N,indice)
      N=N+1
    }
}